Send inivitation link to operators
+ Send email to operators for collab
+ Swagger docs generated
